[b]Version 0.6.8[/b]:

(2009-06-21)
 * Added the new menu Program under the Browse menu. It allows to change
   the program track for ts files. Known issue: when a program changes, the 
   video and audio track will probably change too but the video and audio menus
   doesn't show that change.
 * The OSD is not shown until 3 seconds after the video started to play. This
   avoid a lot of messages being printed on the OSD at startup.

(2009-06-12)
 * Applied (with a few changes) the patch wheelfunctionpatch4.txt by
   Stivo (helifan at users.sourceforge.net).
   It adds the possibility to change the function of the mouse wheel with
   a mouse click.

(2009-06-02)
 * (Windows) smplayer should recognize now Windows 7, if using Qt 4.5.1 
   (untested).
 * (Windows, portable version) The default screenshot directory is 
   ./screenshots, and the default additional option for mplayer is 
   -nofontconfig. This way it's not necessary to supply a customized 
   smplayer.ini in the portable package.
 * Recognize the multithreaded mplayer build from kovensky (checks for 
   'MPlayer GIT*'). It assumes it's version 1.0rc3.

(2009-05-24)
 * Bugfix: now the color tags from the mplayer output are really removed
   (linux only).

(2009-05-21)
 * Two new options for the command line have been added: -pos and -size. Both 
   options expect two arguments. -pos specifies the coordinates (x, y) where 
   the main window will be displayed, -size specifies the size (width, height).
   If any of the values is invalid, the option will be silently ignored.

(2009-05-18)
 * New option in the subtitle menu: "subtitle visibility". If the option
   is checked (default) subtitles are visible, otherwise the subtitles won't
   appear in the screen. This is a global option.
 * In the subtitle initialization function, try to find the external subtitle
   using its filename, and not assuming that it's always the last one. 
   It should make the -sub command line option to work as expected.
