@@ -82,6 +82,7 @@ public slots:
 	void openDVD(QString dvd_url);
 	void openVCD(int title = -1);
 	void openAudioCD(int title = -1);
+	void openTV(QString channel_id);
 
 	void loadSub(const QString & sub);
 	void unloadSub();
