@@ -368,75 +368,6 @@
        <string>&amp;Cache</string>
       </attribute>
       <layout class="QGridLayout" >
-       <property name="leftMargin" >
-        <number>9</number>
-       </property>
-       <property name="topMargin" >
-        <number>9</number>
-       </property>
-       <property name="rightMargin" >
-        <number>9</number>
-       </property>
-       <property name="bottomMargin" >
-        <number>9</number>
-       </property>
-       <property name="horizontalSpacing" >
-        <number>6</number>
-       </property>
-       <property name="verticalSpacing" >
-        <number>6</number>
-       </property>
-       <item row="5" column="2" >
-        <widget class="QLabel" name="label_11" >
-         <property name="text" >
-          <string>KB</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="3" >
-        <spacer>
-         <property name="orientation" >
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" >
-          <size>
-           <width>211</width>
-           <height>27</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="3" column="2" >
-        <widget class="QLabel" name="label_7" >
-         <property name="text" >
-          <string>KB</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="2" >
-        <widget class="QLabel" name="label_5" >
-         <property name="text" >
-          <string>KB</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="1" >
-        <widget class="QSpinBox" name="cache_dvds_spin" >
-         <property name="maximum" >
-          <number>100000</number>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0" >
-        <widget class="QLabel" name="label_6" >
-         <property name="text" >
-          <string>Cache for &amp;DVDs:</string>
-         </property>
-         <property name="buddy" >
-          <cstring>cache_dvds_spin</cstring>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="0" colspan="4" >
         <widget class="QLabel" name="textLabel1_12" >
          <property name="text" >
@@ -457,6 +388,33 @@
          </property>
         </widget>
        </item>
+       <item row="1" column="1" >
+        <widget class="QSpinBox" name="cache_files_spin" >
+         <property name="maximum" >
+          <number>100000</number>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="2" >
+        <widget class="QLabel" name="label_3" >
+         <property name="text" >
+          <string>KB</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="3" >
+        <spacer>
+         <property name="orientation" >
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" >
+          <size>
+           <width>211</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
        <item row="2" column="0" >
         <widget class="QLabel" name="label_4" >
          <property name="text" >
@@ -464,6 +422,20 @@
          </property>
          <property name="buddy" >
           <cstring>cache_streams_spin</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1" >
+        <widget class="QSpinBox" name="cache_streams_spin" >
+         <property name="maximum" >
+          <number>100000</number>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="2" >
+        <widget class="QLabel" name="label_5" >
+         <property name="text" >
+          <string>KB</string>
          </property>
         </widget>
        </item>
@@ -480,7 +452,31 @@
          </property>
         </spacer>
        </item>
-       <item row="1" column="3" >
+       <item row="3" column="0" >
+        <widget class="QLabel" name="label_6" >
+         <property name="text" >
+          <string>Cache for &amp;DVDs:</string>
+         </property>
+         <property name="buddy" >
+          <cstring>cache_dvds_spin</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1" >
+        <widget class="QSpinBox" name="cache_dvds_spin" >
+         <property name="maximum" >
+          <number>100000</number>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="2" >
+        <widget class="QLabel" name="label_7" >
+         <property name="text" >
+          <string>KB</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="3" >
         <spacer>
          <property name="orientation" >
           <enum>Qt::Horizontal</enum>
@@ -488,41 +484,7 @@
          <property name="sizeHint" >
           <size>
            <width>211</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="1" column="2" >
-        <widget class="QLabel" name="label_3" >
-         <property name="text" >
-          <string>KB</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1" >
-        <widget class="QSpinBox" name="cache_files_spin" >
-         <property name="maximum" >
-          <number>100000</number>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="1" >
-        <widget class="QSpinBox" name="cache_streams_spin" >
-         <property name="maximum" >
-          <number>100000</number>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="2" >
-        <spacer>
-         <property name="orientation" >
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" >
-          <size>
-           <width>20</width>
-           <height>351</height>
+           <height>27</height>
           </size>
          </property>
         </spacer>
@@ -564,13 +526,6 @@
          </property>
         </spacer>
        </item>
-       <item row="5" column="1" >
-        <widget class="QSpinBox" name="cache_vcds_spin" >
-         <property name="maximum" >
-          <number>100000</number>
-         </property>
-        </widget>
-       </item>
        <item row="5" column="0" >
         <widget class="QLabel" name="label_12" >
          <property name="text" >
@@ -578,6 +533,20 @@
          </property>
          <property name="buddy" >
           <cstring>cache_vcds_spin</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="1" >
+        <widget class="QSpinBox" name="cache_vcds_spin" >
+         <property name="maximum" >
+          <number>100000</number>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="2" >
+        <widget class="QLabel" name="label_11" >
+         <property name="text" >
+          <string>KB</string>
          </property>
         </widget>
        </item>
@@ -590,6 +559,56 @@
           <size>
            <width>201</width>
            <height>27</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="6" column="0" >
+        <widget class="QLabel" name="label_14" >
+         <property name="text" >
+          <string>Cache for &amp;TV:</string>
+         </property>
+         <property name="buddy" >
+          <cstring>cache_tv_spin</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="1" >
+        <widget class="QSpinBox" name="cache_tv_spin" >
+         <property name="maximum" >
+          <number>100000</number>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="2" >
+        <widget class="QLabel" name="label_15" >
+         <property name="text" >
+          <string>KB</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="3" >
+        <spacer>
+         <property name="orientation" >
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" >
+          <size>
+           <width>231</width>
+           <height>27</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="7" column="2" >
+        <spacer>
+         <property name="orientation" >
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" >
+          <size>
+           <width>20</width>
+           <height>201</height>
           </size>
          </property>
         </spacer>
@@ -622,6 +641,7 @@
   <tabstop>cache_dvds_spin</tabstop>
   <tabstop>cache_cds_spin</tabstop>
   <tabstop>cache_vcds_spin</tabstop>
+  <tabstop>cache_tv_spin</tabstop>
  </tabstops>
  <resources/>
  <connections/>
